# src/routes/report.routes.js
@@ -12,8 +12,8 @@ router.post('/', validateSchema(reportSchema), Controller.create)
 router.get('/patient/:id', Controller.findReportsByPatient)
 router.get('/doctor', Controller.findReportsByDoctor)
 router.get('/:id', Controller.findById)
-router.get('/:id/download', Controller.generatePdf)
 router.put('/:id', validateSchema(reportSchema), Controller.update)
 router.delete('/:id', Controller.remove)
+router.get('/:id/download', Controller.generatePdf)
 
 export default router
